--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
+
 
         <style type="text/css">
             .list-kebutuhan li {
@@ -81,7 +83,7 @@
                             <h1 class="mt-0 type--bold">Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Pesantren</h1>
                             <p class="h2">Usia kita memang terbatas, namun amalan jariyah kita akan terus mengalir hingga hari kiamat</p>
                             <div class="mt-5">
-                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">GABUNG PROGRAM BELAJAR</span> </a>
+                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN</span> </a>
                             </div>
                         </div>
                     </div>
@@ -155,9 +157,52 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="container">
+                    <div class="masonry">
+                        <h2 class="mt-0 mb-2 text-center">Dokumentasi Pembangunan Pesantren</h2>
+                        <p class="lead mb-5 text-center">Berikut ini beberapa dokumentasi pembangunan Pesantren IT dan Tahfidz Madrasah Digital</p>
+                        <div class="masonry__container row masonry--active">
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-1.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-1.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-2.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-2.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-3.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-4.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-4.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-5.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-5.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-6.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-6.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-7.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-7.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-8.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-8.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                                <a href="img/img-pembangunan-9.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-9.jpg"> </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-5 text-center">
+                        <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank" class="btn btn--primary-2"><span class="btn__text">LIHAT DOKUMENTASI LAINNYA</span></a>
+                    </div>
+                </div>
+            </section>
         </div>
+
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/parallax.js"></script>
+        <script src="js/isotope.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/scripts.js"></script>
 
