--- a/index.html
+++ b/index.html
@@ -80,49 +80,62 @@
                     <div class="row text-center justify-content-center">
                         <div class="col-md-9">
                             <p class="lead">Assalamualaikum, para <span class="type--bold">#ORANGBAIK</span> pencari surga</p>
-                            <h1 class="mt-0 type--bold">Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Pesantren</h1>
+                            <h1 class="mt-0 type--bold">Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Masjid dan Pesantren</h1>
                             <p class="h2">Usia kita memang terbatas, namun amalan jariyah kita akan terus mengalir hingga hari kiamat</p>
+                            <p class="lead">Yuk, gabung program patungan membangun Pesantren IT dan Tahfidz!</p>
                             <div class="mt-5">
-                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN</span> </a>
+                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="bg--secondary">
+    
+            <section class="switchable feature-large switchable--switch bg--secondary">
+                <div class="container">
+                    <div class="row justify-content-around">
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="img/img-sholat.jpg"> </div>
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <h2>Mari Kita Renungkan</h2>
+                                <p class="lead"> Usia kita terbatas, dan kita tidak tahu kapan kematian akan datang menjemput.</p>
+                                <p class="lead"> Kematian tak selalu datang kepada mereka yang siap. Sudah siapkah kita? </p>
+                                <p class="lead"> Hanya amal kebaikan yang akan menjadi bekal penolong ketika kematian datang menjemput, bukan harta, bukan juga jabatan. </p>
+                                <p class="lead"> Mari kita persiapkan bekal amalan kita di dunia untuk menuju kampung akhirat.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-8">
-                            <h2 class="mb-5 text-center">Mungkin ini salah satu masalah yang sedang kamu rasakan saat ini...</h2>
+                            <h2 class="mb-5 text-center type--bold h1">Lipat Gandakan Amalan Kebaikanmu Secara Eksponensial</h2>
                             <ul class="list-kebutuhan">
                                 <li>
                                     <div class="media-body">
-                                        <p class="lead">Kamu sudah berkeluarga atau sudah bekerja, dan umur kamu pun sudah terbilang dewasa namun kamu masih merasa terbata-bata dalam membaca Al-Qur'an.</p>
+                                        <p class="lead">Umur kita mungkin hanya puluhan tahun saja. Tapi selama masjid yang kita bangun masih berdiri dan senantiasa digunakan sebagai tempat sholat, entah itu ratusan tahun atau bahkan ribuan tahun maka selama itu pulalah kita masih terhitung melakukan amalan sholat.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="media-body">
-                                        <p class="lead">Kamu ingin belajar membaca Al-Qur'an namun kamu merasa malu jika ada orang yang tahu jika di usia kamu yang sekarang kamu masih belum bisa membaca Al-Qur'an dengan baik.</p>
+                                        <p class="lead">Jasad kita hanya satu, dan kita hanya bisa melakukan satu ibadah dalam satu waktu. Tapi jika kita membangun masjid dan setiap waktu sholat ada puluhan bahkan ratusan santri yang melakukan sholat di masjid yang kita bangun, maka sebanyak itu pulalah kita terhitung melakukan sholat.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="media-body">
-                                        <p class="lead">Kamu ingin mengajarkan anak-anakmu belajar membaca Al-Qur'an, namun kamu merasa tidak percaya diri dengan bacaanmu jika harus mengajarkan.</p>
+                                        <p class="lead">Kita mungkin belum bisa menghafal Al-Qur'an. Namun kita mendirikan fasilitas untuk para santri dalam menghafal Al-Qur'an, maka kita akan mendapatkan pahala kebaikan dari setiap ayat yang dihafalkannya. </p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="media-body">
-                                        <p class="lead">Kamu sangat ingin belajar membaca Al-Qur'an dengan baik, namun kamu punya waktu terbatas karena kesibukan kerja atau kuliah jika harus belajar ke Kiyai atau Ustadz.</p>
+                                        <p class="lead">Kita membangun masjid dan pesantren dan di dalamnya senantiasa dibacakan Al-Qur'an, maka selama itu pulalah kita terhitung membaca Al-Qur'an.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="media-body">
-                                        <p class="lead">Kamu sudah bisa membaca Al-Qur'an dengan lancar, namun kamu ingin memperbaiki bacaan Al-Qur'anmu agar lebih tepat dalam pengucapan dan tajwidnya.</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media-body">
-                                        <p class="lead">Kamu merasa bacaan Al-Qur'anmu sangat datar dan tidak berirama, sehingga kamu ingin memperbaiki bacaanmu agar lebih enak di dengar.</p>
+                                        <p class="lead">Waktu kita di dunia memang terbatas. Tapi ketika kita membangun madrasah yang di dalamnya diajarkan ilmu-ilmu yang bermanfaat yang kemudian diamalkan oleh para santrinya. Dan kemudian para santri tersebut mengajarkan ilmu tersebut lagi setelah lulus. Dan begitu seterusnya selama madrasah masih berdiri. Bayangkan berapa kebaikan yang bisa kita dapatkan?</p>
                                     </div>
                                 </li>
                             </ul>
@@ -133,26 +146,58 @@
             </section>
             <section class="text-center">
                 <div class="container">
-                    <img src="img/ayat-quran-1.png">
-                    <p class="lead">Sungguh, Kami telah mendatangkan Kitab (Al-Qur'an) kepada mereka, yang Kami jelaskan atas dasar pengetahuan, sebagai petunjuk dan rahmat bagi orang-orang yang beriman. <strong>(Q.S. Al-A'raf : 52)</strong></p>
+                    <img src="img/dalil-1.jpg">
+                    <p class="lead"><em>"Jika anak Adam meninggal, maka amalnya terputus kecuali dari tiga perkara, sedekah jariyah (wakaf), ilmu yang bermanfaat, dan anak soleh yang berdoa kepadanya."</em> <strong>(HR Muslim)</strong></p>
+                </div>
+            </section>
+            <section class="switchable switchable--switch imagebg height-70" data-overlay="2">
+                <div class="background-image-holder"><img alt="background" src="img/bg-quran-3.jpg"></div>
+                <div class="container pos-vertical-center">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h2>Umur dan kesempatan kita untuk beribadah dan mengumpulkan bekal kebaikan di dunia sangat terbatas. Maka kita harus bersungguh-sungguh dalam beribadah, dan melakukannya dengan <span class="type--bold">SMART</span> selama kita masih memiliki kesempatan.</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="text-center bg--secondary">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10">
+                            <h2 class="h1 type--bold mb-5">Program Langit Patungan Bangun Pesantren IT dan Tahfidz</h2>
+                            <p class="lead"> Mari bersama-sama kita membangun asset umat dengan membangun pesantren IT dan Tahfidz secara gotong royong. Dengan hadirnya pesantren IT dan Tahfidz ini semoga kelak akan lahir banyak generasi masa depan yang tidak hanya menjadi penghafal Al-Qur'an namun juga ahli dalam teknologi.</p>
+
+                            <p class="lead"> Membangun pesantren tentu bukan perkara yang sederhana dan sangat sulit untuk dilakukan jika hanya seorang diri. Namun jika kita melakukannya bersama-sama dalam program patungan ini, semuanya akan mungkin.</p>
+
+                            <p class="lead">Ali bin Abi Thalib R.A. pernah berkata <em>"Kebaikan yang tidak terorganisir akan dikalahkan oleh kejahatan yang terorganisir dengan baik”</em>.</p>
+                            <div class="mt-5">
+                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="text-center">
                 <div class="container">
-                    Renungkanlah:<br />
-                    Padahal Al-Quran adalah petunjuk<br />
-                    Salah satu pemberi syafaat<br />
-                    Bagaimana kita bisa mengajarkan keluarga kita tentang Al-Quran jika kita tidak bisa membaca Al-Quran.
+                    <div class="row justify-content-center">
+                        <div class="col-md-10">
+                            <h2 class="mb-5">Mengapa Pesantren IT dan Tahfidz?</h2>
+                            <p class="lead"> Selain membawa banyak manfaat bagi kehidupan, teknologi (IT) seperti pedang bermata dua, terkadang juga menciptakan banyak masalah baru. Teknologi memaksa banyak hal berubah, termasuk cara belajar, bersosialisasi, bekerja bahkan berkarya. Pada akhirnya kita tidak mungkin bisa menghindari perubahan tersebut. Mau tidak mau kita harus beradaptasi, bahkan jika perlu kitalah yang harus menentukan arah perubahan tersebut.</p>
+
+                            <p class="lead"> Oleh karena itu, dengan rencana dibangunnya Pesantren IT dan Tahfidz Madrasah Digital ini diharapkan bisa menciptakan banyak generasi muda yang tidak hanya memiliki hafalan Al-Quran dan pemahaman agama yang baik, namun juga memiliki keahlian yang mumpuni dalam bidang teknologi.</p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="switchable feature-large bg--secondary">
                 <div class="container">
                     <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Belajar Membaca Al-Quran" class="border--round" src="img/img-quran-3.jpg"> </div>
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="img/img-md.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2>60% penduduk muslim di indonesia tidak bisa membaca Al-Quran</h2>
-                                <p class="lead"> Launching an attractive and scalable website quickly and affordably is important for modern startups — Stack offers massive value without looking 'bargain-bin'. </p> <a href="#">Learn More »</a> </div>
+                                <h2>Pesantren IT dan Tahfidz, <span class="type--bold">Madrasah Digital</span></h2>
+                                <h4 class="mb-2">Lokasi</h4>
+                                <p class="lead">Kampung Gaga RT 01 RW 02 Desa Sukamantri Kecamatan Tambelang Kabupaten Bekasi.</p> <a class="btn btn--primary-2" href="https://www.google.com/maps/dir//-6.1427219,107.1609437/@-6.1430995,107.1607958,19.57z/data=!4m2!4m1!3e0?hl=en"><span class="btn__text">Lihat Peta</span></a> </div>
                         </div>
                     </div>
                 </div>
@@ -193,7 +238,50 @@
                         </div>
                     </div>
                     <div class="mt-5 text-center">
-                        <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank" class="btn btn--primary-2"><span class="btn__text">LIHAT DOKUMENTASI LAINNYA</span></a>
+                        <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank" class="btn btn--primary-2"><span class="btn__text">LIHAT SELURUH DOKUMENTASI</span></a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="text-center bg--secondary">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10 col-lg-10">
+                            <h2>Para Mentor</h2>
+                            <p class="lead mb-5">
+                                Para santri akan dibimbing oleh para mentor praktisi teknologi dan owner bisnis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Kresna Galuh D. Herlangga, Founder & CEO at CodePolitan" src="img/foto-kresna.jpg" class="rounded-circle">
+                                <h5>Kresna Galuh D. Herlangga</h5> <span>Founder & CEO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Toni Haryanto, Co-founder & CIO at CodePolitan" src="https://www.codepolitan.com/codepolitan/themes/belajarcoding/assets/img/foto-toni.png" class="rounded-circle">
+                                <h5>Toni Haryanto</h5> <span>Co-founder & CIO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Aufa Arham, Owner and Founder at Elbina Hijab" src="img/foto-aufa.jpg" class="rounded-circle">
+                                <h5>Aufa Arham</h5> <span>Owner and Founder at Elbina Hijab</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Yudha Pangesti D. Syailendra, Creative Designer at CodePolitan" src="img/foto-yudha.jpg" class="rounded-circle">
+                                <h5>Yudha Pangesti D. Syailendra</h5> <span>Creative Designer at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Muhammad Singgih Z.A., Co-founder & CMO at CodePolitan" src="img/foto-singgih.jpg" class="rounded-circle">
+                                <h5>Muhammad Singgih Z.A.</h5> <span>Co-founder & CMO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Hadyan Palupi, COO at CodePolitan" src="img/foto-hadyan.jpg" class="rounded-circle">
+                                <h5>Hadyan Palupi</h5> <span>COO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Aep Saepudin, Owner at Aura Putri Hijab" src="img/foto-aep.jpg" class="rounded-circle">
+                                <h5>Aep Saepudin</h5> <span>Owner at Aura Putri Hijab</span> </div>
+                        </div>
                     </div>
                 </div>
             </section>
