--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/theme-greensea.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
 
@@ -177,19 +177,7 @@
                     </div>
                 </div>
             </section>
-            <section class="text-center">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-md-10">
-                            <h2 class="mb-5">Mengapa Pesantren IT dan Tahfidz?</h2>
-                            <p class="lead"> Selain membawa banyak manfaat bagi kehidupan, teknologi (IT) seperti pedang bermata dua, terkadang juga menciptakan banyak masalah baru. Teknologi memaksa banyak hal berubah, termasuk cara belajar, bersosialisasi, bekerja bahkan berkarya. Pada akhirnya kita tidak mungkin bisa menghindari perubahan tersebut. Mau tidak mau kita harus beradaptasi, bahkan jika perlu kitalah yang harus menentukan arah perubahan tersebut.</p>
-
-                            <p class="lead"> Oleh karena itu, dengan rencana dibangunnya Pesantren IT dan Tahfidz Madrasah Digital ini diharapkan bisa menciptakan banyak generasi muda yang tidak hanya memiliki hafalan Al-Quran dan pemahaman agama yang baik, namun juga memiliki keahlian yang mumpuni dalam bidang teknologi.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="switchable feature-large bg--secondary">
+            <section class="switchable feature-large">
                 <div class="container">
                     <div class="row justify-content-around">
                         <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="img/img-md.jpg"> </div>
@@ -202,6 +190,118 @@
                     </div>
                 </div>
             </section>
+
+            <section class="text-center bg--primary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2 class="mt-0 mb-2 text-center">Program Pesantren Madrasah Digital</h2>
+                            <p class="lead mb-5 text-center">Berikut ini beberapa program yang rencananya akan diselenggarakan di Madrasah Digital</p>
+                            <div class="row justify-content-center">
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Tahfidz Al-Qur'an</h4>
+                                        <hr>
+                                        <p> Santri akan menghafal Al-Qur'an setiap hari dan akan memiliki target hafalan tertentu yang harus disetorkan setiap harinya. Seluruh santri diwajibkan menghafal minimal 5 juz Al-Qur'an.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Inkubasi Teknologi</h4>
+                                        <hr>
+                                        <p> Santri akan diajarkan beberapa keahlian dalam bidang teknologi seperti programming, design dan internet marketing. Santri dipersilahkan memilih jalur belajarnya sesuai minatnya. </p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Kajian Agama Islam</h4>
+                                        <hr>
+                                        <p> Santri akan belajar dan memperdalam agama Islam dibimbing para ustadz pengasuh. Pelajaran agama Islam akan dilakukan dengan metode halaqoh, ceramah maupun sistem kelas.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Kelas Inspirasi</h4>
+                                        <hr>
+                                        <p> Kelas inspirasi diselengarakan sebulan sekali dan menghadirkan para mentor praktisi ataupun owner bisnis untuk memberikan wawasan dan pengalamannya kepada para santri. </p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Sholat Dhuha</h4>
+                                        <hr>
+                                        <p> Program Sholat Dhuha dilakukan setiap hari untuk membentuk kebiasaan para santri untuk terus melaksanakan sholat Dhuha setiap hari sebelum memulai aktivitas harian.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="feature feature-4 boxed boxed--lg boxed--border"> 
+                                        <h4 class="h3">Hidroponik</h4>
+                                        <hr>
+                                        <p> Santri juga akan dilatih untuk menanam sayuran secara hidroponik. Selain digunakan untuk makan harian santri, hasil panen dari hidroponik juga akan dijual untuk kebutuhan pesantren.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10">
+                            <h2 class="mb-5">Mengapa Pesantren IT dan Tahfidz?</h2>
+                            <p class="lead"> Selain membawa banyak manfaat bagi kehidupan, teknologi (IT) seperti pedang bermata dua, terkadang juga menciptakan banyak masalah baru. Teknologi memaksa banyak hal berubah, termasuk cara belajar, bersosialisasi, bekerja bahkan berkarya. Pada akhirnya kita tidak mungkin bisa menghindari perubahan tersebut. Mau tidak mau kita harus beradaptasi, bahkan jika perlu kitalah yang harus menentukan arah perubahan tersebut.</p>
+
+                            <p class="lead"> Oleh karena itu, dengan rencana dibangunnya Pesantren IT dan Tahfidz Madrasah Digital ini diharapkan bisa menciptakan banyak generasi muda yang tidak hanya memiliki hafalan Al-Quran dan pemahaman agama yang baik, namun juga memiliki keahlian yang mumpuni dalam bidang teknologi.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="text-center bg--secondary">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10 col-lg-10">
+                            <h2>Para Mentor</h2>
+                            <p class="lead mb-5">
+                                Para santri akan dibimbing oleh para mentor praktisi teknologi dan owner bisnis dalam Kelas Inspirasi.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Kresna Galuh D. Herlangga, Founder & CEO at CodePolitan" src="img/foto-kresna.jpg" class="rounded-circle">
+                                <h5>Kresna Galuh D. Herlangga</h5> <span>Founder & CEO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Toni Haryanto, Co-founder & CIO at CodePolitan" src="img/foto-toni.png" class="rounded-circle">
+                                <h5>Toni Haryanto</h5> <span>Co-founder & CIO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Aufa Arham, Owner and Founder at Elbina Hijab" src="img/foto-aufa.jpg" class="rounded-circle">
+                                <h5>Aufa Arham</h5> <span>Owner and Founder at Elbina Hijab</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Yudha Pangesti D. Syailendra, Creative Designer at CodePolitan" src="img/foto-yudha.jpg" class="rounded-circle">
+                                <h5>Yudha Pangesti D. Syailendra</h5> <span>Creative Designer at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Muhammad Singgih Z.A., Co-founder & CMO at CodePolitan" src="img/foto-singgih.jpg" class="rounded-circle">
+                                <h5>Muhammad Singgih Z.A.</h5> <span>Co-founder & CMO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Hadyan Palupi, COO at CodePolitan" src="img/foto-hadyan.jpg" class="rounded-circle">
+                                <h5>Hadyan Palupi</h5> <span>COO at CodePolitan</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Aep Saepudin, Owner at Aura Putri Hijab" src="img/foto-aep.jpg" class="rounded-circle">
+                                <h5>Aep Saepudin</h5> <span>Owner at Aura Putri Hijab</span> </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section>
                 <div class="container">
                     <div class="masonry">
@@ -243,48 +343,7 @@
                 </div>
             </section>
 
-            <section class="text-center bg--secondary">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-md-10 col-lg-10">
-                            <h2>Para Mentor</h2>
-                            <p class="lead mb-5">
-                                Para santri akan dibimbing oleh para mentor praktisi teknologi dan owner bisnis
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Kresna Galuh D. Herlangga, Founder & CEO at CodePolitan" src="img/foto-kresna.jpg" class="rounded-circle">
-                                <h5>Kresna Galuh D. Herlangga</h5> <span>Founder & CEO at CodePolitan</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Toni Haryanto, Co-founder & CIO at CodePolitan" src="https://www.codepolitan.com/codepolitan/themes/belajarcoding/assets/img/foto-toni.png" class="rounded-circle">
-                                <h5>Toni Haryanto</h5> <span>Co-founder & CIO at CodePolitan</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Aufa Arham, Owner and Founder at Elbina Hijab" src="img/foto-aufa.jpg" class="rounded-circle">
-                                <h5>Aufa Arham</h5> <span>Owner and Founder at Elbina Hijab</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Yudha Pangesti D. Syailendra, Creative Designer at CodePolitan" src="img/foto-yudha.jpg" class="rounded-circle">
-                                <h5>Yudha Pangesti D. Syailendra</h5> <span>Creative Designer at CodePolitan</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Muhammad Singgih Z.A., Co-founder & CMO at CodePolitan" src="img/foto-singgih.jpg" class="rounded-circle">
-                                <h5>Muhammad Singgih Z.A.</h5> <span>Co-founder & CMO at CodePolitan</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Hadyan Palupi, COO at CodePolitan" src="img/foto-hadyan.jpg" class="rounded-circle">
-                                <h5>Hadyan Palupi</h5> <span>COO at CodePolitan</span> </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="feature feature-8"> <img alt="Aep Saepudin, Owner at Aura Putri Hijab" src="img/foto-aep.jpg" class="rounded-circle">
-                                <h5>Aep Saepudin</h5> <span>Owner at Aura Putri Hijab</span> </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
         </div>
 
         <script src="js/jquery-3.1.1.min.js"></script>
