Update Landing page

--- a/index.html
+++ b/index.html
@@ -343,6 +343,68 @@
                 </div>
             </section>
 
+
+            <section class="bg--secondary">
+                <div class="container">
+                    <h2 class="mt-0 mb-2 text-center">Pilih Paket Patunganmu</h2>
+                    <p class="lead mb-5 text-center">Jangan tunda amal kebaikan, selama kita masih punya kesempatan.</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="pricing pricing-1 boxed boxed--lg boxed--border">
+                                <h3>Paket Khoir</h3> <span class="h2"><strong>Rp 50.000</strong></span>
+                                <hr>
+                                <ul>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Bonus Tote Bag Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
+                                </ul>
+                                <a class="btn btn--primary" href="#"> <span class="btn__text">PATUNGAN PAKET INI</span> </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="pricing pricing-1 boxed boxed--lg boxed--border boxed--emphasis">
+                                <h3>Paket Ahsan</h3> <span class="h2"><strong>Rp 100.000</strong></span> <span class="label">recommended</span>
+                                <hr>
+                                <ul>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Bonus Video Tutorial Pemrograman</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Tote Bag Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
+                                </ul>
+                                <a class="btn btn--primary-1" href="#"> <span class="btn__text">
+                            PATUNGAN PAKET INI
+                        </span> </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="pricing pricing-1 boxed boxed--lg boxed--border">
+                                <h3>Paket Barokah</h3> <span class="h2"><strong>Rp 200.000</strong></span>
+                                <hr>
+                                <ul>
+                                    <li><span class="checkmark bg--primary-1"> </span><span>Bonus Kaos Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Bonus Video Tutorial Pemrograman</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Tote Bag Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
+                                </ul>
+                                <a class="btn btn--primary" href="#"> <span class="btn__text">
+                            PATUNGAN PAKET INI
+                        </span> </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p class="lead mb-5 text-center">CATATAN: Bonus akan dikirimkan setiap akhir bulan secara serempak. Mohon bersabar.</p>
+                </div>
+            </section>
+
+            <section class="text-center space--sm bg--dark">
+                <div class="container">
+                    <h3>Apakah kamu punya pertanyaan terkait Program Patungan Pesantren ini?</h3>
+                    <a href="http://bit.ly/wa-codepolitan" target="_blank"><img alt="Tombol WhatsApp" src="img/button-wa.png"></a>
+                </div>
+            </section>
+
             
         </div>
 
