--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
         <meta name="msapplication-TileImage" content="img/icon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
+        <!-- META -->
+        <link rel="canonical" href="https://www.madrasahdigital.id/">
+        <meta property="og:locale" content="id_ID">
+        <meta property="og:type" content="article">
+        <meta property="og:title" content="Gotong Royong Membangun Asset Umat, Pesantren IT dan Tahfidz">
+        <meta property="og:description" content="Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Masjid dan Pesantren">
+        <meta property="og:url" content="">
+        <meta property="og:site_name" content="https://www.madrasahdigital.id/">
+        <meta property="article:publisher" content="https://www.facebook.com/madrasahdigital.id/">
+        <meta property="og:image" content="img/pesantren.jpg">
+        <meta property="og:image:width" content="700">
+        <meta property="og:image:height" content="350">
+
+        <meta name="description" content="Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Masjid dan Pesantren">
+        <meta property="description" content="Miliki Amalan Tak Terputus Hingga Hari Kiamat dengan Patungan Membangun Masjid dan Pesantren">
+        <meta property="language" content="Indonesia">
+        <meta property="revisit-after" content="7">
+        <meta property="rating" content="general">
+
+
+        <meta property="webcrawlers" content="all">
+        <meta property="spiders" content="all">
+        <meta property="robots" content="all">
+
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
