--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <meta property="og:url" content="">
         <meta property="og:site_name" content="https://www.madrasahdigital.id/">
         <meta property="article:publisher" content="https://www.facebook.com/madrasahdigital.id/">
-        <meta property="og:image" content="img/pesantren.jpg">
+        <meta property="og:image" content="https://www.madrasahdigital.id/img/pesantren.jpg">
         <meta property="og:image:width" content="700">
         <meta property="og:image:height" content="350">
 
