--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
                             <div class="feature feature-8"> <img alt="Aep Saepudin, Owner at Aura Putri Hijab" src="img/foto-aep.jpg" class="rounded-circle">
                                 <h5>Aep Saepudin</h5> <span>Owner at Aura Putri Hijab</span> </div>
                         </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Ahmad Syarif, Founder and CEO at CyberLabs" src="img/foto-syarif.jpg" class="rounded-circle">
+                                <h5>Ahmad Syarif</h5> <span>Founder and CEO at CyberLabs</span> </div>
+                        </div>
                     </div>
                 </div>
             </section>
