--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <p class="h2">Usia kita memang terbatas, namun amalan jariyah kita akan terus mengalir hingga hari kiamat</p>
                             <p class="lead">Yuk, gabung program patungan membangun Pesantren IT dan Tahfidz!</p>
                             <div class="mt-5">
-                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
+                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#patungan"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
 
                             <p class="lead">Ali bin Abi Thalib R.A. pernah berkata <em>"Kebaikan yang tidak terorganisir akan dikalahkan oleh kejahatan yang terorganisir dengan baik”</em>.</p>
                             <div class="mt-5">
-                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
+                                <!--<a class="btn type--uppercase btn-scroll-to" href="#programbelajar"> <span class="btn__text">PELAJARI PROGRAM</span> </a> --><a class="btn btn--primary type--uppercase btn-scroll-to" href="#patungan"> <span class="btn__text">IKUT PATUNGAN SEKARANG</span> </a>
                             </div>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
             </section>
 
 
-            <section class="bg--secondary">
+            <section class="bg--secondary" id="patungan">
                 <div class="container">
                     <h2 class="mt-0 mb-2 text-center">Pilih Paket Patunganmu</h2>
                     <p class="lead mb-5 text-center">Jangan tunda amal kebaikan, selama kita masih punya kesempatan.</p>
@@ -386,7 +386,7 @@
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary" href="#"> <span class="btn__text">PATUNGAN PAKET INI</span> </a>
+                                <a class="btn btn--primary" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*KHOIR%20Rp%2050.000*%0A%0ATerima%20kasih"> <span class="btn__text">PATUNGAN PAKET INI</span> </a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -395,11 +395,11 @@
                                 <hr>
                                 <ul>
                                     <li><span class="checkmark bg--primary-1"></span><span>Bonus Video Tutorial Pemrograman</span></li>
-                                    <li><span class="checkmark bg--primary-1"></span><span>Tote Bag Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Bonus Tote Bag Madrasah Digital</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary-1" href="#"> <span class="btn__text">
+                                <a class="btn btn--primary-1" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*AHSAN%20Rp%20100.000*%0A%0ATerima%20kasih"> <span class="btn__text">
                             PATUNGAN PAKET INI
                         </span> </a>
                             </div>
@@ -411,11 +411,11 @@
                                 <ul>
                                     <li><span class="checkmark bg--primary-1"> </span><span>Bonus Kaos Madrasah Digital</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Bonus Video Tutorial Pemrograman</span></li>
-                                    <li><span class="checkmark bg--primary-1"></span><span>Tote Bag Madrasah Digital</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Bonus Tote Bag Madrasah Digital</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary" href="#"> <span class="btn__text">
+                                <a class="btn btn--primary" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*BAROKAH%20Rp%20200.000*%0A%0ATerima%20kasih"> <span class="btn__text">
                             PATUNGAN PAKET INI
                         </span> </a>
                             </div>
@@ -429,7 +429,7 @@
             <section class="text-center space--sm bg--dark">
                 <div class="container">
                     <h3>Apakah kamu punya pertanyaan terkait Program Patungan Pesantren ini?</h3>
-                    <a href="http://bit.ly/wa-codepolitan" target="_blank"><img alt="Tombol WhatsApp" src="img/button-wa.png"></a>
+                    <a href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20bertanya%20seputar%20pembangunan%20Pesantren%20IT%20dan%20Tahfidz%20Madrasah%20DIgital.%0A%0APertanyaan%20saya%20%3A%20" target="_blank"><img alt="Tombol WhatsApp" src="img/button-wa.png"></a>
                 </div>
             </section>
 
@@ -442,6 +442,18 @@
         <script src="js/lightbox.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/scripts.js"></script>
+
+        <script type="text/javascript">
+            $(".btn-scroll-to").click(function() {
+                var href_data = $(this).attr("href");
+
+                $('html, body').animate({
+                    scrollTop: $(href_data).offset().top - 46
+                }, 1000);
+
+                return false;
+            });
+        </script>
 
     </body>
 
